; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/extr_isci_interrupt.c_isci_interrupt_msix_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/extr_isci_interrupt.c_isci_interrupt_msix_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ISCI_INTERRUPT_INFO = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 (i32)*, i64 (i32)* }
%struct.ISCI_CONTROLLER = type { i64, i32, i32 }

@TRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @isci_interrupt_msix_handler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ISCI_INTERRUPT_INFO*, align 8
  %4 = alloca %struct.ISCI_CONTROLLER*, align 8
  %5 = alloca i64 (i32)*, align 8
  %6 = alloca i32 (i32)*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = bitcast i8* %8 to %struct.ISCI_INTERRUPT_INFO*
  store %struct.ISCI_INTERRUPT_INFO* %9, %struct.ISCI_INTERRUPT_INFO** %3, align 8
  %10 = load %struct.ISCI_INTERRUPT_INFO*, %struct.ISCI_INTERRUPT_INFO** %3, align 8
  %11 = getelementptr inbounds %struct.ISCI_INTERRUPT_INFO, %struct.ISCI_INTERRUPT_INFO* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to %struct.ISCI_CONTROLLER*
  store %struct.ISCI_CONTROLLER* %13, %struct.ISCI_CONTROLLER** %4, align 8
  %14 = load %struct.ISCI_INTERRUPT_INFO*, %struct.ISCI_INTERRUPT_INFO** %3, align 8
  %15 = getelementptr inbounds %struct.ISCI_INTERRUPT_INFO, %struct.ISCI_INTERRUPT_INFO* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  %18 = load i64 (i32)*, i64 (i32)** %17, align 8
  store i64 (i32)* %18, i64 (i32)** %5, align 8
  %19 = load %struct.ISCI_INTERRUPT_INFO*, %struct.ISCI_INTERRUPT_INFO** %3, align 8
  %20 = getelementptr inbounds %struct.ISCI_INTERRUPT_INFO, %struct.ISCI_INTERRUPT_INFO* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32 (i32)*, i32 (i32)** %22, align 8
  store i32 (i32)* %23, i32 (i32)** %6, align 8
  %24 = load %struct.ISCI_CONTROLLER*, %struct.ISCI_CONTROLLER** %4, align 8
  %25 = getelementptr inbounds %struct.ISCI_CONTROLLER, %struct.ISCI_CONTROLLER* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @scif_controller_get_scic_handle(i32 %26)
  store i32 %27, i32* %7, align 4
  %28 = load i64 (i32)*, i64 (i32)** %5, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i64 %28(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %51

32:                                               ; preds = %1
  %33 = load %struct.ISCI_CONTROLLER*, %struct.ISCI_CONTROLLER** %4, align 8
  %34 = getelementptr inbounds %struct.ISCI_CONTROLLER, %struct.ISCI_CONTROLLER* %33, i32 0, i32 1
  %35 = call i32 @mtx_lock(i32* %34)
  %36 = load i32 (i32)*, i32 (i32)** %6, align 8
  %37 = load i32, i32* %7, align 4
  %38 = call i32 %36(i32 %37)
  %39 = load %struct.ISCI_CONTROLLER*, %struct.ISCI_CONTROLLER** %4, align 8
  %40 = getelementptr inbounds %struct.ISCI_CONTROLLER, %struct.ISCI_CONTROLLER* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* @TRUE, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %47

44:                                               ; preds = %32
  %45 = load %struct.ISCI_CONTROLLER*, %struct.ISCI_CONTROLLER** %4, align 8
  %46 = call i32 @isci_controller_release_queued_ccbs(%struct.ISCI_CONTROLLER* %45)
  br label %47

47:                                               ; preds = %44, %32
  %48 = load %struct.ISCI_CONTROLLER*, %struct.ISCI_CONTROLLER** %4, align 8
  %49 = getelementptr inbounds %struct.ISCI_CONTROLLER, %struct.ISCI_CONTROLLER* %48, i32 0, i32 1
  %50 = call i32 @mtx_unlock(i32* %49)
  br label %51

51:                                               ; preds = %47, %1
  ret void
}

declare dso_local i32 @scif_controller_get_scic_handle(i32) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @isci_controller_release_queued_ccbs(%struct.ISCI_CONTROLLER*) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
